Fix for unnecessary whitespace on Marketing Agency page.

--- a/app/assets/stylesheets/staticpages.css.scss
+++ b/app/assets/stylesheets/staticpages.css.scss
@@ -173,11 +173,13 @@
 
 
 /* Marketing Agency page =================================================== */
-.marketing-agency {
+body.marketing_agency {
   @media ( min-width: $xga-h ) {
     background-image: image-url( 'bg-landing-2.jpg' );
     background-size: cover;
   }
+}
+.marketing-agency {
   .translucent-white {
     background-color: #fff;
     background-color: rgba(255,255,255,0.7);
